# SurviveNJU-CS

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: index.md
docs/academics/: academic-integrity.md  course-selection.md  exam-prep.md  gpa-guide.md  index.md  student-procedures.md
docs/assets/: extra.css
docs/campus-life/: campus-services.md  clubs.md  competition.md  emergency.md  healthcare.md  index.md  mental-health.md
docs/career/: index.md  internship.md  postgrad-exam.md  recommendation.md  research.md  study-abroad.md
docs/courses/: index.md  suzhou-colleges.md
docs/courses/ai-core/: cv.md  deep-learning.md  index.md  knowledge-repr.md  ml-intro.md  nlp.md
docs/courses/cs-core/: compiler.md  computer-organization.md  data-structures.md  database.md  ics.md  index.md  networks.md  os.md  software-eng.md
docs/courses/general-education/: index.md
docs/courses/math-foundation/: calculus.md  discrete-math.md  index.md  linear-algebra.md  probability.md
docs/courses/se-core/: index.md  se-computing.md  software-analysis.md  software-testing.md
docs/getting-started/: cs-overview.md  index.md  info-literacy.md  major-transfer.md  mindset.md
docs/labs/: index.md
docs/preface/: contributing.md  disclaimer.md  index.md
docs/resources/: books.md  github-repos.md  index.md  online-courses.md  past-exams.md  thesis-templates.md  tools.md
